# smt-playground

./: README.md  pyproject.toml
smt_playground/: polynomial_roots.py
